--- a/paypal.html
+++ b/paypal.html
@@ -19,7 +19,9 @@
           purchase_units: [
             {
               amount: {
-                value: "10.00" // The amount to charge (in USD)
+                value: "10.00",
+                currency_code: "CAD" // Specify the currency code
+
               }
             }
           ]
