--- a/paypal.html
+++ b/paypal.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PayPal Payment</title>
-  <script src="https://www.paypal.com/sdk/js?client-id=AVbCSel_AIjO9KPdaDRkGffy3-s_FEPwjjtyd-vnXHVMkL_uedQwiuesuPWXSW8yPe9XXb8Z-s5kri00&currency=USD"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=AVbCSel_AIjO9KPdaDRkGffy3-s_FEPwjjtyd-vnXHVMkL_uedQwiuesuPWXSW8yPe9XXb8Z-s5kri00&currency=CAD"></script>
 </head>
 <body>
   <h1>Pay with PayPal</h1>
@@ -21,7 +21,6 @@
               amount: {
                 value: "10.00",
                 currency_code: "CAD" // Specify the currency code
-
               }
             }
           ]
