--- a/paypal.html
+++ b/paypal.html
@@ -32,6 +32,7 @@
         return actions.order.capture().then(function (details) {
           // Show a confirmation message to the buyer
           alert("Transaction completed by " + details.payer.name.given_name);
+          window.location.href = "https://www.https://rickie-austin-114.github.io/success.html";
         });
       },
 
