--- a/redirect/button.html
+++ b/redirect/button.html
@@ -31,13 +31,7 @@
 </head>
 <body>
 
-    <button>Go to Example.com</button>
-    <script>
-        // Optional: You can add JavaScript here if you want to handle the button click differently
-        document.querySelector('button').addEventListener('click', function() {
-            // Example of additional functionality
-            window.location.href = './success.html';
-        });
-    </script>
+    <a href="https://rickie-austin-114.github.io/redirect/success.html">
+        <button>Click to Redirect</button>
 </body>
 </html>
