--- a/redirect/button.html
+++ b/redirect/button.html
@@ -32,6 +32,6 @@
 <body>
 
     <a href="https://rickie-austin-114.github.io/redirect/success.html">
-        <button>Click to Redirect</button>
+        go to success</a>
 </body>
 </html>
