--- a/paypal/index.html
+++ b/paypal/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        .spacer {
+          height: 200px; /* Spacer height */
+        }
+      </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PayPal Payment</title>
   <script src="https://www.paypal.com/sdk/js?client-id=AVbCSel_AIjO9KPdaDRkGffy3-s_FEPwjjtyd-vnXHVMkL_uedQwiuesuPWXSW8yPe9XXb8Z-s5kri00&currency=CAD"></script>
 </head>
 <body>
+
+    <div class="spacer"></div> <!-- Spacer div -->
+
   <h1>Pay with PayPal</h1>
   <div id="paypal-button-container"></div>
 
