--- a/models/new_york_city.html
+++ b/models/new_york_city.html
@@ -1,68 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>3D Model Viewer</title>
-    <style>
-      body {
-        margin: 0;
+<head>
+  <meta charset="UTF-8">
+  <title>OBJ Viewer</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
+    canvas {
+      display: block;
+    }
+  </style>
+</head>
+<body>
+  <!-- Container for the 3D canvas -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/OBJLoader.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/controls/OrbitControls.js"></script>
+
+  <script>
+    // Scene setup
+    const scene = new THREE.Scene();
+    scene.background = new THREE.Color(0xeeeeee);
+
+    const camera = new THREE.PerspectiveCamera(
+      75,
+      window.innerWidth / window.innerHeight,
+      0.1,
+      1000
+    );
+    camera.position.z = 5;
+
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
+
+    // Controls
+    const controls = new THREE.OrbitControls(camera, renderer.domElement);
+
+    // Lighting
+    const ambientLight = new THREE.AmbientLight(0x404040, 2); // Soft light
+    scene.add(ambientLight);
+
+    const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
+    directionalLight.position.set(1, 1, 1).normalize();
+    scene.add(directionalLight);
+
+    // Load OBJ model
+    const loader = new THREE.OBJLoader();
+    loader.load(
+      './LibertyStatue/LibertStatue.obj', // Replace with your .obj file path
+      function (object) {
+        object.scale.set(1, 1, 1); // Optional: scale model
+        scene.add(object);
+      },
+      function (xhr) {
+        console.log((xhr.loaded / xhr.total * 100) + '% loaded');
+      },
+      function (error) {
+        console.error('An error happened:', error);
       }
-      canvas {
-        display: block;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="sketchfab-embed-wrapper">
-      <iframe
-        title="Manhattan - New York"
-        frameborder="0"
-        allowfullscreen
-        mozallowfullscreen="true"
-        webkitallowfullscreen="true"
-        allow="autoplay; fullscreen; xr-spatial-tracking"
-        xr-spatial-tracking
-        execution-while-out-of-viewport
-        execution-while-not-rendered
-        web-share
-        src="https://sketchfab.com/models/6f6c4edb53e04b4ab1dae9024e1b8bde/embed"
-      >
-      </iframe>
-      <p
-        style="
-          font-size: 13px;
-          font-weight: normal;
-          margin: 5px;
-          color: #4a4a4a;
-        "
-      >
-        <a
-          href="https://sketchfab.com/3d-models/manhattan-new-york-6f6c4edb53e04b4ab1dae9024e1b8bde?utm_medium=embed&utm_campaign=share-popup&utm_content=6f6c4edb53e04b4ab1dae9024e1b8bde"
-          target="_blank"
-          rel="nofollow"
-          style="font-weight: bold; color: #1caad9"
-        >
-          Manhattan - New York
-        </a>
-        by
-        <a
-          href="https://sketchfab.com/3dcreation_lyon?utm_medium=embed&utm_campaign=share-popup&utm_content=6f6c4edb53e04b4ab1dae9024e1b8bde"
-          target="_blank"
-          rel="nofollow"
-          style="font-weight: bold; color: #1caad9"
-        >
-          3dcreation_lyon
-        </a>
-        on
-        <a
-          href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=6f6c4edb53e04b4ab1dae9024e1b8bde"
-          target="_blank"
-          rel="nofollow"
-          style="font-weight: bold; color: #1caad9"
-          >Sketchfab</a
-        >
-      </p>
-    </div>
-  </body>
+    );
+
+    // Handle resizing
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
+
+    // Animation loop
+    function animate() {
+      requestAnimationFrame(animate);
+      controls.update();
+      renderer.render(scene, camera);
+    }
+    animate();
+  </script>
+</body>
 </html>
